WebApp/Ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app.pmontenegro.com
      http:
        paths:
          - path: /apache
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
